src/test/ui/parser/issues/issue-89396.stderr
error: expected one of `=>`, `if`, or `|`, found `=`
  --> $DIR/issue-89396.rs:9:17
   |
LL |         Some(_) = true,
   |                 ^
   |                 |
   |                 expected one of `=>`, `if`, or `|`
   |                 help: try using a fat arrow here: `=>`

error: expected one of `=>`, `@`, `if`, or `|`, found `->`
  --> $DIR/issue-89396.rs:12:14
   |
LL |         None -> false,
   |              ^^
   |              |
   |              expected one of `=>`, `@`, `if`, or `|`
   |              help: try using a fat arrow here: `=>`

error: aborting due to 2 previous errors

